--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/google-maps": "^5.5.0",
     "@ionic/pwa-elements": "^3.2.2",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
+    "@react-google-maps/api": "^2.19.2",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "cordova-plugin-ionic": "5.5.3",
